hphp/hack/test/typecheck/inout/bad_inout_use_lvalue3.php.exp
File "bad_inout_use_lvalue3.php", line 10, characters 5-31:
You cannot decorate this argument as `inout` (Parsing[1002])
File "bad_inout_use_lvalue3.php", line 10, characters 11-31:
`inout` arguments may only be local variables or array indexing expressions  (NastCheck[3050])
